# thm

./: .gitignore  .gitignore copy  CMakeLists copy.txt  CMakeLists.txt  Doxyfile  README copy.md  README.md  Study2.hdf  derivation.docx  grid-1.eps  id_data.csv  index.md  license.md  mesh.msh  mesh.nas  model.db  model.geo  model.msh  model.nas  parameter.json  parameters.csv  parameters.txt  thm  untitled.geo  untitled.msh
.circleci/: config.yml
build copy/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json  rules.ninja
clang-tools/: format.sh
include/: boundaryvalues.h  clock.h  externalfunc.h  geothermal.h  globalvariables.h  initialvalues.h  interpolation.h  mesh_reader.h  righthandside.h  sourceterm.h  temptemp
inputfiles/: OLD_MESH.msh  benchmark_COMSOL.txt  bigwell.msh  mesh.msh  mesh_small.msh  parameters.csv  parameters_for_interpolation.txt
src/: Geothermal.cc  get_parameter.cc  inOrNot.cc  interpolation1d.cc  linspace.cc  main.cc  main_consolidation.cc
